--- a/post_peli.html
+++ b/post_peli.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/K.png">
-  <link rel="stylesheet" href="css/post-peli.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="CSS/post-peli.css">
+  <link rel="stylesheet" href="CSS/index.css">
   <title>Mi Pelicula</title>
 </head>
 <body>
@@ -15,9 +15,7 @@
     </div>
    <div class="navbar_browse">
      <ul>
-       <li class="navbar-selected"><a href="post_peli.html">Mi Pelicula</a></li>
-       <li class="navbar-selected"><a href="#milista">Mi Lista</a></li>
-       <li class="navbar-selected"><a href="#">Mis Videos kiko</a></li>
+       <li class="navbar-selected"><a href="index.html">Inicio</a></li>
      </ul>
    </div>
      
