--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 <h2>Metal Gótico y mas</h2>
 <div class="vid" id="">
     <video class="clip" src="vid/LACRIMOSA 23.mp4" poster="img/cantantes/lacrimosa.jpg"></video>
+    <video class="clip" src="vid/1.mp4" poster="img/cantantes/lacrimosa.jpg"></video>
 </div>
       
   
