--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 </div>
 <h2>Metal Gótico y mas</h2>
 <div class="vid" id="">
-    <video class="clip" src="vid/LACRIMOSA 23.mp4" poster="img/cantantes/lacrimosa.jpg"></video>
+	  <img onclick="videoUrl(lacrimosa),Logo('img/covers/deapol.jpg'),Nombre('Lacrimosa en concierto.'),Para('200% para ti '),Ano('2011 1h 47min PG-18 N_° 5  en conciertos kiko')"  src="img/covers/deapol.jpg" alt="Lacrimosa en concierto">
+    <video class="clip" src="lacrimosa" poster="img/cantantes/lacrimosa.jpg"></video>
     <video class="clip" src="vid/1.mp4" poster="img/cantantes/lacrimosa.jpg"></video>
 </div>
       
